--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -2,9 +2,9 @@
 DIMENSION=2,
 SIM_CONTINUE=False,
 START_STEP=0,
-ADT=0.125,0.0625,0.02,0.01
-NUM_OF_STEPS=125000.0/ADT+1,
-PRINT_STEPS=6250.0/ADT,
+ADT=0.125,
+NUM_OF_STEPS=125.0/ADT+1,
+PRINT_STEPS=12.5/ADT,
 PRECISION=double,
 WORK_GROUP_SIZE=64,
 BCTYPE_X=NOFLUX,
@@ -52,7 +52,7 @@ D_s=0.0,
 Eps_2=6*SQRT2*GAMMA_Ni*D0/(T_M_NI),
 W=6*SQRT2*GAMMA_Ni/(D0*T_M_NI),
 R=8.3144087,
-HT_COEFF=1,3,5,7,9,11,13,15,17,19,21
+HT_COEFF=1,2
 
 [VISIBLE_PHYSICAL_PARAMETERS]
 # PHASE FIELD
