A Plapp modellel szeretnék szferolitot növeszteni, ehhez írtam át.
Megváltoztattam a hajtóerőt, ráraktam kinetikus anizotrópiát, lecsökkentettem a HT_Plappot
bevezettem egy új változót a HT_PLAPP_COEFF-et, hogy ezzel változtassam azt,
most már 3 féle inicializáló alakzat van: sok szemcse, 4 szemcse négyzetként elrendezve, 1 szemcse középen

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -3,33 +3,33 @@ DIMENSION=2,
 SIM_CONTINUE=False,
 START_STEP=0,
 ADT=0.125,
-NUM_OF_STEPS=125.0/ADT+1,
-PRINT_STEPS=12.5/ADT,
+NUM_OF_STEPS=6250/ADT+1,
+PRINT_STEPS=625/ADT,
 PRECISION=double,
 WORK_GROUP_SIZE=64,
 BCTYPE_X=NOFLUX,
 BCTYPE_Y=NOFLUX,
-SUPERSATURATION=1.2,
+SUPERSATURATION=0.8,
 # ANISOTROPY: 1: ISOTROPE - 2: KINETIC ANISOTROPY - 3: SURFACE ANISOTROPY
-ANISOTROPY=1,
+ANISOTROPY=2,
 # MODELL: 1: MAGGRAD - 2: PLAPP - 3: MAGGRAD WITH SIDEBRANCHING
-MODELL=1,
+MODELL=2,
 #SHOW_GRAIN_BOUNDARY 0: DOES NOT SHOW - 1: SHOWS WITH WHITE IN THE ORIENTATION FIELD MAP, WHERE  0.4<PHI<0.6
 SHOW_GRAIN_BOUNDARY=1,
 #EXPORT_FORMAT 1: LINEAR - 2: MATRIX
 EXPORT_FORMAT=1,
 #NEW_OR_CONTINUE 0: NEW - 1: CONTINUE
 NEW_OR_CONTINUE=0,
-#INITIAL_SHAPE 0: CIRCLES FILLING THE WHOLE LATTICE 1: 4 RECTANGLES
-INITIAL_SHAPE=1,
+#INITIAL_SHAPE 0: CIRCLES FILLING THE WHOLE LATTICE 1: 4 RECTANGLES 2: 1 CICLE IN THE MIDDLE OF THE LATTICE
+INITIAL_SHAPE=2,
 
 
 [CONSTANTS]
 SIX=6,
 
 [2D_SIMBOX]
-XSIZE=128,
-YSIZE=128,
+XSIZE=512,
+YSIZE=512,
 
 [3D_SIMBOX]
 
@@ -52,12 +52,14 @@ D_s=0.0,
 Eps_2=6*SQRT2*GAMMA_Ni*D0/(T_M_NI),
 W=6*SQRT2*GAMMA_Ni/(D0*T_M_NI),
 R=8.3144087,
-HT_COEFF=1,2
+HT_COEFF=1,
+HT_PLAPP_COEFF=1,0.8,0.6,0.4,0.2
+
 
 [VISIBLE_PHYSICAL_PARAMETERS]
 # PHASE FIELD
 T_0=1574.0,
-DLESS_M_PHI=0.9,
+DLESS_M_PHI=0.9,3.6
 DLESS_W=SIX*SQRT2*GAMMA_Ni/(D0*T_M_NI)*Xi*Xi/(SIX*SQRT2*GAMMA_Ni*D0/T_M_NI),
 DLESS_DH_F_NI_PF=DH_F_NI*Xi*Xi/((SIX*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
 DLESS_DH_F_CU_PF=DH_F_CU*Xi*Xi/((SIX*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
@@ -65,7 +67,7 @@ DLESS_HT=4.0*GAMMA_Ni*Xi/((6*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0)*HT_COEFF,
 S_0_KINETIC=0.5,
 S_0_SURFACE=0.03,
 K=4,
-DLESS_HT_PLAPP=8.0*GAMMA_Ni*D0/(6*SQRT2*GAMMA_Ni*D0/(T_M_NI)*T_M_NI)*17.0,
+DLESS_HT_PLAPP=8.0*GAMMA_Ni*D0/(6*SQRT2*GAMMA_Ni*D0/(T_M_NI)*T_M_NI)*HT_PLAPP_COEFF,
 # CONCENTRATION FIELD
 
 D_S_RAT=D_s/D_l,
