maggrad modellben szferolit növesztésre írtam át, maggrad tag eh-ja fi3 helyett p(fi) lett
pár paramétert még meg kellett változtatni, de nem sokat

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -13,7 +13,7 @@ SUPERSATURATION=0.8,
 # ANISOTROPY: 1: ISOTROPE - 2: KINETIC ANISOTROPY - 3: SURFACE ANISOTROPY
 ANISOTROPY=2,
 # MODELL: 1: MAGGRAD - 2: PLAPP - 3: MAGGRAD WITH SIDEBRANCHING
-MODELL=2,
+MODELL=1,
 #SHOW_GRAIN_BOUNDARY 0: DOES NOT SHOW - 1: SHOWS WITH WHITE IN THE ORIENTATION FIELD MAP, WHERE  0.4<PHI<0.6
 SHOW_GRAIN_BOUNDARY=1,
 #EXPORT_FORMAT 1: LINEAR - 2: MATRIX
@@ -53,13 +53,13 @@ Eps_2=6*SQRT2*GAMMA_Ni*D0/(T_M_NI),
 W=6*SQRT2*GAMMA_Ni/(D0*T_M_NI),
 R=8.3144087,
 HT_COEFF=1,
-HT_PLAPP_COEFF=1,0.8,0.6,0.4,0.2
+HT_PLAPP_COEFF=1.0,
 
 
 [VISIBLE_PHYSICAL_PARAMETERS]
 # PHASE FIELD
 T_0=1574.0,
-DLESS_M_PHI=0.9,3.6
+DLESS_M_PHI=0.9,
 DLESS_W=SIX*SQRT2*GAMMA_Ni/(D0*T_M_NI)*Xi*Xi/(SIX*SQRT2*GAMMA_Ni*D0/T_M_NI),
 DLESS_DH_F_NI_PF=DH_F_NI*Xi*Xi/((SIX*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
 DLESS_DH_F_CU_PF=DH_F_CU*Xi*Xi/((SIX*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
