a mai változtatással a kezdő konfigurációba beraktam egy olyan állapotot leírő függvényt, ami a két szilárd állapot közé betesz még egy folyadék állapotot is

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -12,7 +12,7 @@ BCTYPE_Y=NOFLUX,
 SUPERSATURATION=0.8,
 # ANISOTROPY: 1: ISOTROPE - 2: KINETIC ANISOTROPY - 3: SURFACE ANISOTROPY
 ANISOTROPY=2,
-# MODELL: 1: MAGGRAD - 2: PLAPP - 3: MAGGRAD WITH SIDEBRANCHING
+# MODELL: 1: MAGGRAD - 2: PLAPP - 3: MAGGRAD WITH SIDEBRANCHING - 4: MAGGRAD MODEL WITH PHI**3 COEFFICIENT FUNCTION
 MODELL=1,
 #SHOW_GRAIN_BOUNDARY 0: DOES NOT SHOW - 1: SHOWS WITH WHITE IN THE ORIENTATION FIELD MAP, WHERE  0.4<PHI<0.6
 SHOW_GRAIN_BOUNDARY=1,
