init_funct.cl -> uj fuggvenyek trijunction mozgas vizsgalathoz

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -3,17 +3,23 @@ DIMENSION=2,
 SIM_CONTINUE=False,
 START_STEP=0,
 ADT=0.125,
-NUM_OF_STEPS=6250/ADT+1,
-PRINT_STEPS=625/ADT,
+NUM_OF_STEPS=625/ADT+1,
+PRINT_STEPS=125/ADT,
 PRECISION=double,
 WORK_GROUP_SIZE=64,
 BCTYPE_X=NOFLUX,
 BCTYPE_Y=NOFLUX,
 SUPERSATURATION=0.8,
 # ANISOTROPY: 1: ISOTROPE - 2: KINETIC ANISOTROPY - 3: SURFACE ANISOTROPY
-ANISOTROPY=2,
-# MODELL: 1: MAGGRAD - 2: PLAPP - 3: MAGGRAD WITH SIDEBRANCHING - 4: MAGGRAD MODEL WITH PHI**3 COEFFICIENT FUNCTION
-MODELL=1,
+ANISOTROPY=1,
+# MODELL 1: MAGGRAD MODEL WITH P(PHI) COEFFIECIONT FUNCTION
+# MODELL 2: MAGGRAD MODEL WITH PHI3 COEFFIECIONT FUNCTION: 4 POINT LAPLACIAN 
+# MODELL 3: MAGGRAD MODEL WITH PHI3 COEFFIECIONT FUNCTION: 9 POINT LAPLACIAN
+# MODELL 4: MAGGRAD MODEL WITH PHI4 COEFFIECIONT FUNCTION: 9 POINT LAPLACIAN
+# MODELL 5: MAGGRAD MODEL SIDEBRANCHING
+# MODELL 6: PLAPP MODEL: 4 POINT LAPLACIAN
+# MODELL 7: PLAPP MODEL: 9 POINT LAPLACIAN
+MODELL=8,
 #SHOW_GRAIN_BOUNDARY 0: DOES NOT SHOW - 1: SHOWS WITH WHITE IN THE ORIENTATION FIELD MAP, WHERE  0.4<PHI<0.6
 SHOW_GRAIN_BOUNDARY=1,
 #EXPORT_FORMAT 1: LINEAR - 2: MATRIX
@@ -21,7 +27,8 @@ EXPORT_FORMAT=1,
 #NEW_OR_CONTINUE 0: NEW - 1: CONTINUE
 NEW_OR_CONTINUE=0,
 #INITIAL_SHAPE 0: CIRCLES FILLING THE WHOLE LATTICE 1: 4 RECTANGLES 2: 1 CICLE IN THE MIDDLE OF THE LATTICE
-INITIAL_SHAPE=2,
+INITIAL_SHAPE=1,
+ONE_OR_TWO_COMP=1,
 
 
 [CONSTANTS]
@@ -41,18 +48,19 @@ DT=4.75e-6*ADT,
 
 [INVISIBLE_PHYSICAL_PARAMETERS]
 GAMMA_Ni=0.052484417,
-#D0=1.0e-9
-D0=4.1577879e-8,
-V_M=7.4e-6,
-DH_F_NI=2.35e9,
+D0=2.0*1.6090908e-10,
+#D0=4.1577879e-8,
+V_M=6.59e-6,
+DH_F_NI=2.61e9,
 DH_F_CU=1.728e9,
-Xi=2.1e-6,
+#Xi=2.1e-6,
+Xi=4.0e-8,
 D_l=1.0e-9,
 D_s=0.0,
 Eps_2=6*SQRT2*GAMMA_Ni*D0/(T_M_NI),
 W=6*SQRT2*GAMMA_Ni/(D0*T_M_NI),
 R=8.3144087,
-HT_COEFF=1,
+HT_COEFF=3.0,
 HT_PLAPP_COEFF=1.0,
 
 
@@ -84,7 +92,7 @@ DLESS_M_THETA_S=7.2e-4,
 DLESS_M_THETA_L_PLAPP=1.6*720*D0/Xi,
 #DLESS_M_THETA_L_PLAPP=1.1*1.6*720*D0/Xi,0.02*1.6*720*D0/Xi,
 #DLESS_M_THETA_S_PLAPP=1.6*720*D0/Xi*1.0e-4,
-DLESS_M_THETA_S_PLAPP=0.03*1.6*720*D0/Xi*1.0e-4,
+DLESS_M_THETA_S_PLAPP=0.03*1.6*720*D0/Xi*10.0,
 
 FORI_M=3.0,
 FORI_N=0.5,
