a maggrad + grad2 modell mozgasegyenleteben a grad2 tag kapott egy 2.0*sqrt(2.0) szorzót, ami eddig hiányozhatott

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -19,6 +19,7 @@ ANISOTROPY=1,
 # MODELL 5: MAGGRAD MODEL SIDEBRANCHING
 # MODELL 6: PLAPP MODEL: 4 POINT LAPLACIAN
 # MODELL 7: PLAPP MODEL: 9 POINT LAPLACIAN
+# MODELL 8: MAGGRAD MODEL WITH PHI4 COEFFICIENT FUNCTION AND GRAD(THETA)2 TERM: 9 POINT LAPLACIAN 
 MODELL=8,
 #SHOW_GRAIN_BOUNDARY 0: DOES NOT SHOW - 1: SHOWS WITH WHITE IN THE ORIENTATION FIELD MAP, WHERE  0.4<PHI<0.6
 SHOW_GRAIN_BOUNDARY=1,
