-betettem a maggrad theta kirajzolását is a kódba, bár még úgy tűnik, hogy nem biztos, hogy jó

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -3,32 +3,26 @@ DIMENSION=2,
 SIM_CONTINUE=False,
 START_STEP=0,
 ADT=0.125,
-NUM_OF_STEPS=625/ADT+1,
-PRINT_STEPS=125/ADT,
+NUM_OF_STEPS=6250/ADT+1,
+PRINT_STEPS=1250/ADT,
 PRECISION=double,
 WORK_GROUP_SIZE=64,
-BCTYPE_X=NOFLUX,
-BCTYPE_Y=NOFLUX,
+BCTYPE_X=PERIODIC,
+BCTYPE_Y=PERIODIC,
 SUPERSATURATION=0.8,
 # ANISOTROPY: 1: ISOTROPE - 2: KINETIC ANISOTROPY - 3: SURFACE ANISOTROPY
 ANISOTROPY=1,
-# MODELL 1: MAGGRAD MODEL WITH P(PHI) COEFFIECIONT FUNCTION
-# MODELL 2: MAGGRAD MODEL WITH PHI3 COEFFIECIONT FUNCTION: 4 POINT LAPLACIAN 
-# MODELL 3: MAGGRAD MODEL WITH PHI3 COEFFIECIONT FUNCTION: 9 POINT LAPLACIAN
-# MODELL 4: MAGGRAD MODEL WITH PHI4 COEFFIECIONT FUNCTION: 9 POINT LAPLACIAN
+
+# MODELL 3: MAGGRAD MODEL WITH PHI INDEPENDENT COEFFIECIONT FUNCTION: 9 POINT LAPLACIAN
 # MODELL 5: MAGGRAD MODEL SIDEBRANCHING
-# MODELL 6: PLAPP MODEL: 4 POINT LAPLACIAN
 # MODELL 7: PLAPP MODEL: 9 POINT LAPLACIAN
-# MODELL 8: MAGGRAD MODEL WITH PHI4 COEFFICIENT FUNCTION AND GRAD(THETA)2 TERM: 9 POINT LAPLACIAN 
-MODELL=8,
+MODELL=3,
 #SHOW_GRAIN_BOUNDARY 0: DOES NOT SHOW - 1: SHOWS WITH WHITE IN THE ORIENTATION FIELD MAP, WHERE  0.4<PHI<0.6
-SHOW_GRAIN_BOUNDARY=1,
+SHOW_GRAIN_BOUNDARY=0,
 #EXPORT_FORMAT 1: LINEAR - 2: MATRIX
 EXPORT_FORMAT=1,
 #NEW_OR_CONTINUE 0: NEW - 1: CONTINUE
 NEW_OR_CONTINUE=0,
-#INITIAL_SHAPE 0: CIRCLES FILLING THE WHOLE LATTICE 1: 4 RECTANGLES 2: 1 CICLE IN THE MIDDLE OF THE LATTICE
-INITIAL_SHAPE=1,
 ONE_OR_TWO_COMP=1,
 
 
