- kicsit tisztogattam a parameter fájlt!

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -44,11 +44,9 @@ DT=4.75e-6*ADT,
 [INVISIBLE_PHYSICAL_PARAMETERS]
 GAMMA_Ni=0.052484417,
 D0=2.0*1.6090908e-10,
-#D0=4.1577879e-8,
 V_M=6.59e-6,
 DH_F_NI=2.61e9,
 DH_F_CU=1.728e9,
-#Xi=2.1e-6,
 Xi=4.0e-8,
 D_l=1.0e-9,
 D_s=0.0,
@@ -79,14 +77,10 @@ DLESS_DH_F_NI_CF=DH_F_NI*V_M/(R*T_0),
 
 # ORIENTATION FIELD
 
-DLESS_M_THETA_L=720.0,
-DLESS_M_THETA_S=7.2e-4,
-# DLESS_M_THETA_L=360.0,
-# DLESS_M_THETA_S=0.0,
+DLESS_M_THETA_L=720.0*0.05,
+DLESS_M_THETA_S=7.2e-4*0.05,
 
 DLESS_M_THETA_L_PLAPP=1.6*720*D0/Xi,
-#DLESS_M_THETA_L_PLAPP=1.1*1.6*720*D0/Xi,0.02*1.6*720*D0/Xi,
-#DLESS_M_THETA_S_PLAPP=1.6*720*D0/Xi*1.0e-4,
 DLESS_M_THETA_S_PLAPP=0.03*1.6*720*D0/Xi*10.0,
 
 FORI_M=3.0,
@@ -100,7 +94,7 @@ C_0=C_S+(1.0-SUPERSATURATION)*(C_L-C_S),
 
 # NOISE COEFFICIENTS:
 PHASE_NOISE_AMPLITUDE=1.05e-3,
-ORIENTATION_NOISE_AMPLITUDE=2.5e-3,
+ORIENTATION_NOISE_AMPLITUDE=2.0e-1,
 #PHASE_NOISE_AMPLITUDE=0.0,
 #ORIENTATION_NOISE_AMPLITUDE=0.0,
 
@@ -116,4 +110,5 @@ NOISE_SEED = 234632,
 [INIT_CONF]
 CROSS=0,
 CROSS_WEIGHT=0.0,
-SIGMA_NOISE=2.0,
+SIGMA_0=1.0e-9/(DX*Xi)*0.2252252,
+SIGMA_NOISE=1.0*SIGMA_0,2.0*SIGMA_0,
