-ezt a verziót adtam oda Gránának, a paraméter fájlban az elejére tettem a d0, szigma_noise,... beállításait

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -1,10 +1,20 @@
+[RESOLUTIONS]
+DX=3.125e-3,
+DT=5.9375e-07,
+D_10_90=1e-9,
+HEIGHT=1.0,
+NOISE_SIGMA_NM=0.3,1.0,
+
+
+
 [SETUP]
 DIMENSION=2,
 SIM_CONTINUE=False,
 START_STEP=0,
 ADT=0.125,
-NUM_OF_STEPS=6250/ADT+1,
-PRINT_STEPS=1250/ADT,
+NUM_OF_POINTS_IN_INTERFACE=10.0,
+NUM_OF_STEPS=2001,
+PRINT_STEPS=1000,
 PRECISION=double,
 WORK_GROUP_SIZE=64,
 BCTYPE_X=PERIODIC,
@@ -26,24 +36,15 @@ NEW_OR_CONTINUE=0,
 ONE_OR_TWO_COMP=1,
 
 
-[CONSTANTS]
-SIX=6,
-
 [2D_SIMBOX]
-XSIZE=512,
-YSIZE=512,
+XSIZE=256,
+YSIZE=256,
 
 [3D_SIMBOX]
 
-[RESOLUTIONS]
-DX=0.00625,
-DT=4.75e-6*ADT,
-
-
-
 [INVISIBLE_PHYSICAL_PARAMETERS]
-GAMMA_Ni=0.052484417,
-D0=2.0*1.6090908e-10,
+GAMMA_Ni=0.364,
+D0=1.6090908e-1*D_10_90,
 V_M=6.59e-6,
 DH_F_NI=2.61e9,
 DH_F_CU=1.728e9,
@@ -55,15 +56,17 @@ W=6*SQRT2*GAMMA_Ni/(D0*T_M_NI),
 R=8.3144087,
 HT_COEFF=3.0,
 HT_PLAPP_COEFF=1.0,
+K_B=1.3806488e-23,
 
 
 [VISIBLE_PHYSICAL_PARAMETERS]
+
 # PHASE FIELD
 T_0=1574.0,
 DLESS_M_PHI=0.9,
-DLESS_W=SIX*SQRT2*GAMMA_Ni/(D0*T_M_NI)*Xi*Xi/(SIX*SQRT2*GAMMA_Ni*D0/T_M_NI),
-DLESS_DH_F_NI_PF=DH_F_NI*Xi*Xi/((SIX*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
-DLESS_DH_F_CU_PF=DH_F_CU*Xi*Xi/((SIX*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
+DLESS_W=6.0*SQRT2*GAMMA_Ni/(D0*T_M_NI)*Xi*Xi/(6.0*SQRT2*GAMMA_Ni*D0/T_M_NI),
+DLESS_DH_F_NI_PF=DH_F_NI*Xi*Xi/((6.0*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
+DLESS_DH_F_CU_PF=DH_F_CU*Xi*Xi/((6.0*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
 DLESS_HT=4.0*GAMMA_Ni*Xi/((6*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0)*HT_COEFF,
 S_0_KINETIC=0.5,
 S_0_SURFACE=0.03,
@@ -77,8 +80,8 @@ DLESS_DH_F_NI_CF=DH_F_NI*V_M/(R*T_0),
 
 # ORIENTATION FIELD
 
-DLESS_M_THETA_L=720.0*0.05,
-DLESS_M_THETA_S=7.2e-4*0.05,
+DLESS_M_THETA_L=720.0*0.01,
+DLESS_M_THETA_S=7.2e-4*0.01,
 
 DLESS_M_THETA_L_PLAPP=1.6*720*D0/Xi,
 DLESS_M_THETA_S_PLAPP=0.03*1.6*720*D0/Xi*10.0,
@@ -93,12 +96,11 @@ C_L=0.466219277392863,
 C_0=C_S+(1.0-SUPERSATURATION)*(C_L-C_S),
 
 # NOISE COEFFICIENTS:
-PHASE_NOISE_AMPLITUDE=1.05e-3,
-ORIENTATION_NOISE_AMPLITUDE=2.0e-1,
-#PHASE_NOISE_AMPLITUDE=0.0,
-#ORIENTATION_NOISE_AMPLITUDE=0.0,
-
-
+DZ=DX*HEIGHT,
+PHI_NOISE_0=(2.0*DLESS_M_PHI*T_M_NI*K_B*DT/(Xi*6*SQRT2*GAMMA_Ni*D0*(DX*DX*DZ))),
+# PHI_NOISE=SQRT(PHI_NOISE_0)*PHI_NOISE_COEFF
+ORI_NOISE_0=(DLESS_M_THETA_L*T_M_NI*K_B*DT/(2.0*Xi*Xi*GAMMA_Ni*DX*DX*DZ)),
+#ORI_NOISE=SQRT(ORI_NOISE_0*ORI_NOISE_COEFF)
 
 [VISIBLE_PHYSICAL_PARAMETERS_FOR_CALC]
 T_M_NI=1728.0,
@@ -111,4 +113,4 @@ NOISE_SEED = 234632,
 CROSS=0,
 CROSS_WEIGHT=0.0,
 SIGMA_0=1.0e-9/(DX*Xi)*0.2252252,
-SIGMA_NOISE=1.0*SIGMA_0,2.0*SIGMA_0,
+SIGMA_NOISE=NOISE_SIGMA_NM*SIGMA_0,
