a unix.px a 0.1->0E1 átírást mostantól nem végzi el és a DX egy DX_0-n keresztül dimenziósan megadható

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -1,9 +1,15 @@
-[RESOLUTIONS]
-DX=3.125e-3,
+[RESOLUTIONS_0]
+# DX_0: DX IN METER UNITS
+DX_0=1.25e-10,
+# DT: IN DIMENSIONLESS UNITS
 DT=5.9375e-07,
+# D_10_90 IN METER UNITS
 D_10_90=1e-9,
+# WIDTH ALONG THE Z AXIS: DZ=HEIGHT*DX
 HEIGHT=1.0,
-NOISE_SIGMA_NM=0.3,1.0,
+# NOISE_SIGMA_NM: CORRELATION LENGTH OF THE ORIENTATION NOISE IN NM UNITS 
+NOISE_SIGMA_NM=0.3,
+Xi=4.0e-8,
 
 
 
@@ -11,8 +17,6 @@ NOISE_SIGMA_NM=0.3,1.0,
 DIMENSION=2,
 SIM_CONTINUE=False,
 START_STEP=0,
-ADT=0.125,
-NUM_OF_POINTS_IN_INTERFACE=10.0,
 NUM_OF_STEPS=2001,
 PRINT_STEPS=1000,
 PRECISION=double,
@@ -35,6 +39,10 @@ EXPORT_FORMAT=1,
 NEW_OR_CONTINUE=0,
 ONE_OR_TWO_COMP=1,
 
+[RESOLUTIONS_1]
+DX=DX_0/Xi,
+DT=5.9375e-07,
+
 
 [2D_SIMBOX]
 XSIZE=256,
@@ -48,7 +56,6 @@ D0=1.6090908e-1*D_10_90,
 V_M=6.59e-6,
 DH_F_NI=2.61e9,
 DH_F_CU=1.728e9,
-Xi=4.0e-8,
 D_l=1.0e-9,
 D_s=0.0,
 Eps_2=6*SQRT2*GAMMA_Ni*D0/(T_M_NI),
