-most már kiírja a dx dt d_10_90 értéket a futtatáskor

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -1,15 +1,17 @@
 [RESOLUTIONS_0]
 # DX_0: DX IN METER UNITS
-DX_0=1.25e-10,
+DX_0=1.0e-10,
 # DT: IN DIMENSIONLESS UNITS
 DT=5.9375e-07,
 # D_10_90 IN METER UNITS
 D_10_90=1e-9,
 # WIDTH ALONG THE Z AXIS: DZ=HEIGHT*DX
-HEIGHT=1.0,
+HEIGHT=25.0,
 # NOISE_SIGMA_NM: CORRELATION LENGTH OF THE ORIENTATION NOISE IN NM UNITS 
 NOISE_SIGMA_NM=0.3,
 Xi=4.0e-8,
+# ORIENTATION NOISE LINEAR COEFFICIENT:
+ORI_NOISE_COEFF=5.0,
 
 
 
@@ -106,8 +108,8 @@ C_0=C_S+(1.0-SUPERSATURATION)*(C_L-C_S),
 DZ=DX*HEIGHT,
 PHI_NOISE_0=(2.0*DLESS_M_PHI*T_M_NI*K_B*DT/(Xi*6*SQRT2*GAMMA_Ni*D0*(DX*DX*DZ))),
 # PHI_NOISE=SQRT(PHI_NOISE_0)*PHI_NOISE_COEFF
-ORI_NOISE_0=(DLESS_M_THETA_L*T_M_NI*K_B*DT/(2.0*Xi*Xi*GAMMA_Ni*DX*DX*DZ)),
-#ORI_NOISE=SQRT(ORI_NOISE_0*ORI_NOISE_COEFF)
+ORI_NOISE_0=(DLESS_M_THETA_L*T_M_NI*K_B*DT/(2.0*Xi*Xi*GAMMA_Ni*DX*DX*DZ))*ORI_NOISE_COEFF*ORI_NOISE_COEFF,
+#ORI_NOISE=SQRT(ORI_NOISE_0)*ORI_NOISE_COEFF
 
 [VISIBLE_PHYSICAL_PARAMETERS_FOR_CALC]
 T_M_NI=1728.0,
