phase-field is szűrt zajt kap és a szűr már uniform zajt kap bemenetnek, nem pedig Gausst

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -6,12 +6,14 @@ DT=5.9375e-07,
 # D_10_90 IN METER UNITS
 D_10_90=1e-9,
 # WIDTH ALONG THE Z AXIS: DZ=HEIGHT*DX
-HEIGHT=25.0,
+HEIGHT=1.0,
 # NOISE_SIGMA_NM: CORRELATION LENGTH OF THE ORIENTATION NOISE IN NM UNITS 
 NOISE_SIGMA_NM=0.3,
 Xi=4.0e-8,
 # ORIENTATION NOISE LINEAR COEFFICIENT:
-ORI_NOISE_COEFF=5.0,
+ORI_NOISE_COEFF=0.5,
+# PHASE FIELD NOISE LINEAR COEFFICIENT:
+PHASE_NOISE_COEFF=0.5,
 
 
 
@@ -20,7 +22,7 @@ DIMENSION=2,
 SIM_CONTINUE=False,
 START_STEP=0,
 NUM_OF_STEPS=2001,
-PRINT_STEPS=1000,
+PRINT_STEPS=100,
 PRECISION=double,
 WORK_GROUP_SIZE=64,
 BCTYPE_X=PERIODIC,
@@ -106,7 +108,7 @@ C_0=C_S+(1.0-SUPERSATURATION)*(C_L-C_S),
 
 # NOISE COEFFICIENTS:
 DZ=DX*HEIGHT,
-PHI_NOISE_0=(2.0*DLESS_M_PHI*T_M_NI*K_B*DT/(Xi*6*SQRT2*GAMMA_Ni*D0*(DX*DX*DZ))),
+PHI_NOISE_0=(2.0*DLESS_M_PHI*T_M_NI*K_B*DT/(Xi*6*SQRT2*GAMMA_Ni*D0*(DX*DX*DZ)))*PHASE_NOISE_COEFF*PHASE_NOISE_COEFF,
 # PHI_NOISE=SQRT(PHI_NOISE_0)*PHI_NOISE_COEFF
 ORI_NOISE_0=(DLESS_M_THETA_L*T_M_NI*K_B*DT/(2.0*Xi*Xi*GAMMA_Ni*DX*DX*DZ))*ORI_NOISE_COEFF*ORI_NOISE_COEFF,
 #ORI_NOISE=SQRT(ORI_NOISE_0)*ORI_NOISE_COEFF
