-a DT korábban 2-szer is benne volt, ezt most javítottam, illetve kivettem belőle a HT_COEFF-et

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -45,8 +45,6 @@ ONE_OR_TWO_COMP=1,
 
 [RESOLUTIONS_1]
 DX=DX_0/Xi,
-DT=5.9375e-07,
-
 
 [2D_SIMBOX]
 XSIZE=256,
@@ -65,7 +63,6 @@ D_s=0.0,
 Eps_2=6*SQRT2*GAMMA_Ni*D0/(T_M_NI),
 W=6*SQRT2*GAMMA_Ni/(D0*T_M_NI),
 R=8.3144087,
-HT_COEFF=3.0,
 HT_PLAPP_COEFF=1.0,
 K_B=1.3806488e-23,
 
@@ -78,7 +75,7 @@ DLESS_M_PHI=0.9,
 DLESS_W=6.0*SQRT2*GAMMA_Ni/(D0*T_M_NI)*Xi*Xi/(6.0*SQRT2*GAMMA_Ni*D0/T_M_NI),
 DLESS_DH_F_NI_PF=DH_F_NI*Xi*Xi/((6.0*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
 DLESS_DH_F_CU_PF=DH_F_CU*Xi*Xi/((6.0*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
-DLESS_HT=4.0*GAMMA_Ni*Xi/((6*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0)*HT_COEFF,
+DLESS_HT=4.0*GAMMA_Ni*Xi/((6*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
 S_0_KINETIC=0.5,
 S_0_SURFACE=0.03,
 K=4,
