--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -2,9 +2,8 @@
 DIMENSION=2,
 SIM_CONTINUE=False,
 START_STEP=0,
-ADT=0.125,
-NUM_OF_STEPS=625/ADT+1,
-PRINT_STEPS=125/ADT,
+NUM_OF_STEPS=5,
+PRINT_STEPS=1,
 PRECISION=double,
 WORK_GROUP_SIZE=64,
 BCTYPE_X=NOFLUX,
@@ -22,56 +21,56 @@ ANISOTROPY=1,
 # MODELL 8: MAGGRAD MODEL WITH PHI4 COEFFICIENT FUNCTION AND GRAD(THETA)2 TERM: 9 POINT LAPLACIAN 
 MODELL=8,
 #SHOW_GRAIN_BOUNDARY 0: DOES NOT SHOW - 1: SHOWS WITH WHITE IN THE ORIENTATION FIELD MAP, WHERE  0.4<PHI<0.6
-SHOW_GRAIN_BOUNDARY=1,
+SHOW_GRAIN_BOUNDARY=0,
 #EXPORT_FORMAT 1: LINEAR - 2: MATRIX
 EXPORT_FORMAT=1,
 #NEW_OR_CONTINUE 0: NEW - 1: CONTINUE
 NEW_OR_CONTINUE=0,
 #INITIAL_SHAPE 0: CIRCLES FILLING THE WHOLE LATTICE 1: 4 RECTANGLES 2: 1 CICLE IN THE MIDDLE OF THE LATTICE
-INITIAL_SHAPE=1,
+INITIAL_SHAPE=4,
 ONE_OR_TWO_COMP=1,
 
+PHASE_NOISE_COEFF=1.0,
+ORI_NOISE_COEFF=1.0,
+HEIGHT=1.0,
 
-[CONSTANTS]
-SIX=6,
 
 [2D_SIMBOX]
-XSIZE=512,
-YSIZE=512,
+XSIZE=32,
+YSIZE=256,
 
 [3D_SIMBOX]
 
 [RESOLUTIONS]
 DX=0.00625,
-DT=4.75e-6*ADT,
+DT=5.9375e-07,
 
 
 
 [INVISIBLE_PHYSICAL_PARAMETERS]
-GAMMA_Ni=0.052484417,
-D0=2.0*1.6090908e-10,
-#D0=4.1577879e-8,
+GAMMA_Ni=0.364,
+D0=1.6090908e-10,
 V_M=6.59e-6,
 DH_F_NI=2.61e9,
 DH_F_CU=1.728e9,
-#Xi=2.1e-6,
 Xi=4.0e-8,
 D_l=1.0e-9,
 D_s=0.0,
 Eps_2=6*SQRT2*GAMMA_Ni*D0/(T_M_NI),
 W=6*SQRT2*GAMMA_Ni/(D0*T_M_NI),
 R=8.3144087,
-HT_COEFF=3.0,
+HT_COEFF=1.0,
 HT_PLAPP_COEFF=1.0,
+K_B=1.3806488e-23,
 
 
 [VISIBLE_PHYSICAL_PARAMETERS]
 # PHASE FIELD
 T_0=1574.0,
 DLESS_M_PHI=0.9,
-DLESS_W=SIX*SQRT2*GAMMA_Ni/(D0*T_M_NI)*Xi*Xi/(SIX*SQRT2*GAMMA_Ni*D0/T_M_NI),
-DLESS_DH_F_NI_PF=DH_F_NI*Xi*Xi/((SIX*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
-DLESS_DH_F_CU_PF=DH_F_CU*Xi*Xi/((SIX*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
+DLESS_W=6.0*SQRT2*GAMMA_Ni/(D0*T_M_NI)*Xi*Xi/(6.0*SQRT2*GAMMA_Ni*D0/T_M_NI),
+DLESS_DH_F_NI_PF=DH_F_NI*Xi*Xi/((6.0*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
+DLESS_DH_F_CU_PF=DH_F_CU*Xi*Xi/((6.0*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
 DLESS_HT=4.0*GAMMA_Ni*Xi/((6*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0)*HT_COEFF,
 S_0_KINETIC=0.5,
 S_0_SURFACE=0.03,
@@ -87,12 +86,8 @@ DLESS_DH_F_NI_CF=DH_F_NI*V_M/(R*T_0),
 
 DLESS_M_THETA_L=720.0,
 DLESS_M_THETA_S=7.2e-4,
-# DLESS_M_THETA_L=360.0,
-# DLESS_M_THETA_S=0.0,
 
 DLESS_M_THETA_L_PLAPP=1.6*720*D0/Xi,
-#DLESS_M_THETA_L_PLAPP=1.1*1.6*720*D0/Xi,0.02*1.6*720*D0/Xi,
-#DLESS_M_THETA_S_PLAPP=1.6*720*D0/Xi*1.0e-4,
 DLESS_M_THETA_S_PLAPP=0.03*1.6*720*D0/Xi*10.0,
 
 FORI_M=3.0,
@@ -105,12 +100,11 @@ C_L=0.466219277392863,
 C_0=C_S+(1.0-SUPERSATURATION)*(C_L-C_S),
 
 # NOISE COEFFICIENTS:
-PHASE_NOISE_AMPLITUDE=1.05e-3,
-ORIENTATION_NOISE_AMPLITUDE=2.5e-3,
-#PHASE_NOISE_AMPLITUDE=0.0,
-#ORIENTATION_NOISE_AMPLITUDE=0.0,
-
-
+DZ=DX*HEIGHT,
+PHI_NOISE_0=(2.0*DLESS_M_PHI*T_M_NI*K_B*DT/(Xi*6*SQRT2*GAMMA_Ni*D0*(DX*DX*DZ)))*PHASE_NOISE_COEFF*PHASE_NOISE_COEFF,
+# PHI_NOISE=SQRT(PHI_NOISE_0)*PHI_NOISE_COEFF
+ORI_NOISE_0=(DLESS_M_THETA_L*T_M_NI*K_B*DT/(2.0*Xi*Xi*GAMMA_Ni*DX*DX*DZ))*ORI_NOISE_COEFF*ORI_NOISE_COEFF,
+#ORI_NOISE=SQRT(ORI_NOISE_0)*ORI_NOISE_COEFF
 
 [VISIBLE_PHYSICAL_PARAMETERS_FOR_CALC]
 T_M_NI=1728.0,
@@ -118,3 +112,7 @@ T_M_CU=1358.0,
 
 [RNG]
 NOISE_SEED = 234632,
+
+[INIT_CONF]
+CROSS=0,
+CROSS_WEIGHT=0.0,
