kijavítottam a phase field mozgásegyenletében, a 0-1 tartományba való visszarakást, mert korábban, ha -0.1 alá ment, akkor 0.99-re raktam vissza

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -2,13 +2,13 @@
 DIMENSION=2,
 SIM_CONTINUE=False,
 START_STEP=0,
-NUM_OF_STEPS=5,
-PRINT_STEPS=1,
+NUM_OF_STEPS=5000,
+PRINT_STEPS=1000,
 PRECISION=double,
 WORK_GROUP_SIZE=64,
-BCTYPE_X=NOFLUX,
-BCTYPE_Y=NOFLUX,
-SUPERSATURATION=0.8,
+BCTYPE_X=PERIODIC,
+BCTYPE_Y=PERIODIC,
+SUPERSATURATION=0.0,
 # ANISOTROPY: 1: ISOTROPE - 2: KINETIC ANISOTROPY - 3: SURFACE ANISOTROPY
 ANISOTROPY=1,
 # MODELL 1: MAGGRAD MODEL WITH P(PHI) COEFFIECIONT FUNCTION
@@ -19,7 +19,7 @@ ANISOTROPY=1,
 # MODELL 6: PLAPP MODEL: 4 POINT LAPLACIAN
 # MODELL 7: PLAPP MODEL: 9 POINT LAPLACIAN
 # MODELL 8: MAGGRAD MODEL WITH PHI4 COEFFICIENT FUNCTION AND GRAD(THETA)2 TERM: 9 POINT LAPLACIAN 
-MODELL=8,
+MODELL=7,
 #SHOW_GRAIN_BOUNDARY 0: DOES NOT SHOW - 1: SHOWS WITH WHITE IN THE ORIENTATION FIELD MAP, WHERE  0.4<PHI<0.6
 SHOW_GRAIN_BOUNDARY=0,
 #EXPORT_FORMAT 1: LINEAR - 2: MATRIX
@@ -27,16 +27,16 @@ EXPORT_FORMAT=1,
 #NEW_OR_CONTINUE 0: NEW - 1: CONTINUE
 NEW_OR_CONTINUE=0,
 #INITIAL_SHAPE 0: CIRCLES FILLING THE WHOLE LATTICE 1: 4 RECTANGLES 2: 1 CICLE IN THE MIDDLE OF THE LATTICE
-INITIAL_SHAPE=4,
+INITIAL_SHAPE=-1,
 ONE_OR_TWO_COMP=1,
 
-PHASE_NOISE_COEFF=1.0,
-ORI_NOISE_COEFF=1.0,
+PHASE_NOISE_COEFF=2.0,4.0,8.0,
+ORI_NOISE_COEFF=0.1,
 HEIGHT=1.0,
 
 
 [2D_SIMBOX]
-XSIZE=32,
+XSIZE=256,
 YSIZE=256,
 
 [3D_SIMBOX]
@@ -66,7 +66,7 @@ K_B=1.3806488e-23,
 
 [VISIBLE_PHYSICAL_PARAMETERS]
 # PHASE FIELD
-T_0=1574.0,
+T_0=1374.0,
 DLESS_M_PHI=0.9,
 DLESS_W=6.0*SQRT2*GAMMA_Ni/(D0*T_M_NI)*Xi*Xi/(6.0*SQRT2*GAMMA_Ni*D0/T_M_NI),
 DLESS_DH_F_NI_PF=DH_F_NI*Xi*Xi/((6.0*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
