beírtam pár új kezdeti függvényt, ami képes a Plapp modellben szemcséket egymás mellé letenni, illetve szemcsét másik közepére

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -43,13 +43,13 @@ YSIZE=256,
 
 [RESOLUTIONS]
 DX=0.00625,
-DT=5.9375e-07,
+DT=5.9375e-08,
 
 
 
 [INVISIBLE_PHYSICAL_PARAMETERS]
 GAMMA_Ni=0.364,
-D0=1.6090908e-10,
+D0=2.0*1.6090908e-10,
 V_M=6.59e-6,
 DH_F_NI=2.61e9,
 DH_F_CU=1.728e9,
@@ -60,13 +60,13 @@ Eps_2=6*SQRT2*GAMMA_Ni*D0/(T_M_NI),
 W=6*SQRT2*GAMMA_Ni/(D0*T_M_NI),
 R=8.3144087,
 HT_COEFF=1.0,
-HT_PLAPP_COEFF=1.0,
+HT_PLAPP_COEFF=10.0,
 K_B=1.3806488e-23,
 
 
 [VISIBLE_PHYSICAL_PARAMETERS]
 # PHASE FIELD
-T_0=1374.0,
+T_0=974.0,
 DLESS_M_PHI=0.9,
 DLESS_W=6.0*SQRT2*GAMMA_Ni/(D0*T_M_NI)*Xi*Xi/(6.0*SQRT2*GAMMA_Ni*D0/T_M_NI),
 DLESS_DH_F_NI_PF=DH_F_NI*Xi*Xi/((6.0*SQRT2*GAMMA_Ni*D0/T_M_NI)*T_0),
@@ -87,8 +87,9 @@ DLESS_DH_F_NI_CF=DH_F_NI*V_M/(R*T_0),
 DLESS_M_THETA_L=720.0,
 DLESS_M_THETA_S=7.2e-4,
 
-DLESS_M_THETA_L_PLAPP=1.6*720*D0/Xi,
-DLESS_M_THETA_S_PLAPP=0.03*1.6*720*D0/Xi*10.0,
+MTHETA_COEFF=1.6,
+DLESS_M_THETA_L_PLAPP=MTHETA_COEFF*7200*D0/Xi,
+DLESS_M_THETA_S_PLAPP=0.03*1.6*7200*D0/Xi*10.0,
 
 FORI_M=3.0,
 FORI_N=0.5,
