volt egy eliras az ujonnan beirt reszbe, most azt kijavitottam

--- a/parameters_binary_tmp.cfg
+++ b/parameters_binary_tmp.cfg
@@ -8,6 +8,8 @@ PRECISION=double,
 WORK_GROUP_SIZE=64,
 BCTYPE_X=PERIODIC,
 BCTYPE_Y=PERIODIC,
+#BCTYPE_X=NOFLUX,
+#BCTYPE_Y=NOFLUX,
 SUPERSATURATION=0.0,
 # ANISOTROPY: 1: ISOTROPE - 2: KINETIC ANISOTROPY - 3: SURFACE ANISOTROPY
 ANISOTROPY=1,
